# automation-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  automation-engine.d.ts  main.cpp
.github/workflows/: build_and_test.yml  ci.yml
cmake-helpers/: UseOpenCV.cmake  UsePackage.cmake
cmake/lua/: FindLua.cmake
src/: CMakeLists.txt
src/apps/automation-engine/: CMakeLists.txt
src/apps/automation-engine/src/: main.cpp
src/apps/automation-engine/src/components/: BoundingBoxComponent.h  DetectContoursComponent.h  DetectObjectsComponent.h  DetectTextComponent.h  DetectionComponent.h  EditableComponent.h  InstanceSegmentationComponent.h  OdometerComponent.h  PositionComponent.h  SegmentMaskComponent.h  TextLabelComponent.h
src/apps/automation-engine/src/events/: KeyPressedEvent.h  MessageEvent.h  ScriptFileSelectedEvent.h
src/apps/automation-engine/src/layout/: CartographyLocalizerWindow.h  CartographyMappedViewWindow.h  CartographyMapperWindow.h  FPSWindow.h  ImageStreamWindow.h  ImageStreamWindowControlsWindow.h  LoadScriptWindow.h  LoggingWindow.h  ManageEntitiesWindow.h  MemoryConsumptionWindow.h  MemoryWindow.h  SidebarTab1Window.h  SidebarTab2Window.h  Toolbar1Window.h  Toolbar2Window.h
src/apps/automation-engine/src/scripts/: swords-and-souls.h
src/apps/automation-engine/src/services/: FontManager.h  GlobalKeyboardListener.cpp  GlobalKeyboardListener.h  Map.h  ParallelTaskManager.h  PathFinder.h
src/apps/automation-engine/src/strategies/: ECSStrategy.h  ImguiImplement.h  ImguiStrategy.h
src/apps/automation-engine/src/structs/: Color.h  Position.h  Size.h
src/apps/automation-engine/src/systems/: CartographySystem.h  DebuggerSystem.h  GUISystem.h  OdometerSystem.h  PositionSystem.h  RenderBoundingBoxSystem.h  RenderEditableComponentsGUISystem.h  RenderSegmentMaskSystem.h  RenderTextSystem.h  ScreenSystem.h  ScriptingSystem.h
src/apps/automation-engine/src/systems/Detection/: DetectContoursSystem.h  DetectObjectsSystem.h  DetectTextSystem.h  DetectionSystemBase.h  InstanceSegmentationSystem.h
src/apps/automation-engine/src/systems/GUISystem/: GUISystem.h  GUISystem.structs.h  IGUISystemWindow.h
src/apps/scripts/: first-script.lua
