add_subdirectory(apps/automation-engine)

add_subdirectory(packages/core)
add_subdirectory(packages/core-imgui)
add_subdirectory(packages/devices)
add_subdirectory(packages/ecs)
add_subdirectory(packages/events)
add_subdirectory(packages/logger)
add_subdirectory(packages/utility)
add_subdirectory(packages/yolo)
